feat: generate code three address almost functional all lenguages